bitfields/tests/compile_error_cases/errors/bitfield_unsigned_field_negative_value.rs
use bitfields::bitfield;

#[bitfield(u8)]
pub struct Bitfield {
    #[bits(8, default = -0x1u8)]
    a: u8,
}

fn main() {}
